--- a/Meditate/Info.plist
+++ b/Meditate/Info.plist
@@ -2,6 +2,71 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeTime</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Start a Meditation</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>One Minute</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).OneMinute</string>
+			<key>UIApplicationShortcutItemUserInfo</key>
+			<dict>
+				<key>firstShortcutKey</key>
+				<string>firstShortcutValue</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeTime</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Start a Meditation</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Five Minutes</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).FiveMinutes</string>
+			<key>UIApplicationShortcutItemUserInfo</key>
+			<dict>
+				<key>secondShortcutKey</key>
+				<string>secondShortcutValue</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeTime</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Start a Meditation</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Ten Minutes</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).TenMinutes</string>
+			<key>UIApplicationShortcutItemUserInfo</key>
+			<dict>
+				<key>thirdShorcutKey</key>
+				<string>thirdShortcutKeyValue</string>
+			</dict>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeTime</string>
+			<key>UIApplicationShortcutItemSubtitle</key>
+			<string>Start a Meditation</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Fifteen Minutes</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>$(PRODUCT_BUNDLE_IDENTIFIER).FifteenMinutes</string>
+			<key>UIApplicationShortcutItemUserInfo</key>
+			<dict>
+				<key>secondShortcutKey1</key>
+				<string>secondShortcutValue1</string>
+			</dict>
+		</dict>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
